[package]
name = "libspa"
version = "0.6.0"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
rust-version = "1.64"
edition = "2018"
categories = ["api-bindings", "multimedia"]
description = "Rust bindings for libspa"
repository = "https://gitlab.freedesktop.org/pipewire/pipewire-rs"
license = "MIT"
readme = "README.md"
homepage = "https://pipewire.org"
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/libspa/"
keywords = ["pipewire", "multimedia", "audio", "video"]

[dependencies]
spa_sys = { package = "libspa-sys", version = "0", path = "../libspa-sys" }
bitflags = "2"
libc = "0.2"
errno = "0.3"
cookie-factory = "0.3.2"
nom = "7"
libspa-macro = { path = "../libspa-macro" }

[dev-dependencies]
pipewire-sys = { version = "0", path = "../pipewire-sys" }
pipewire = { version = "0", path = "../pipewire" }

[build-dependencies]
system-deps = "6"
cc = "1.0.66"

[package.metadata.system-deps]
libspa = { name = "libspa-0.2", version = "0.2" }

[features]
v0_3_33 = []
